# zello-client

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
examples/: .env.example  complete.rs  simple.rs
src/: client.rs  error.rs  handlers.rs  lib.rs  message.rs  protocol.rs  utilities.rs
tests/: integration_test.rs
